Enable addition / deletion from user friends list
